--- a/src/assets/sass/component/_work-card.scss
+++ b/src/assets/sass/component/_work-card.scss
@@ -75,7 +75,7 @@
   font-family: g.$ff-en;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 1.5;
   letter-spacing: 0.48px;
   margin-top: auto;
 
