--- a/src/assets/sass/project/_works-list.scss
+++ b/src/assets/sass/project/_works-list.scss
@@ -2,15 +2,12 @@
 
 .p-works-list {
   display: grid;
-  gap: 32px;
+  gap: 56px;
   /* スマホ：1列 */
   grid-template-columns: 1fr;
 
+  /* タブレット以上：2列 */
   @include g.mq(md) {
-    gap: 48px;
-  }
-
-  @include g.mq(lg) {
     grid-template-columns: repeat(2, 1fr);
     gap: 64px 40px;
   }
